objects/Deficiency_Component__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deficiency Components</relationshipLabel>
        <relationshipName>R00N30000001Bd69EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BUGS_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>http://bugs/bugzilla/show_bug.cgi?id=</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bugzilla__c</fullName>
        <label>Bugzilla</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Deficiency Components</relationshipLabel>
        <relationshipName>R00N30000001Bd6EEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deficiency__c</fullName>
        <label>Deficiency</label>
        <referenceTo>Deficiency__c</referenceTo>
        <relationshipLabel>Deficiency Components</relationshipLabel>
        <relationshipName>R00N30000001Bd64EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FRED_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lists/FRED/DispForm.aspx?ID=</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRED__c</fullName>
        <label>FRED</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deficiency Components</relationshipLabel>
        <relationshipName>R00N30000001Bd6JEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>base_url__c</fullName>
        <defaultValue>false</defaultValue>
        <label>http://intranet.speak.local/marketing/</label>
        <type>Checkbox</type>
    </fields>
    <label>Deficiency Component</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Deficiency Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deficiency Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>